--- a/application/views/scripts/admin/profile/changepassword.phtml
+++ b/application/views/scripts/admin/profile/changepassword.phtml
@@ -49,8 +49,8 @@ $this->headTitle('Profile - Change Password');
                                 <div class="form-group">
                                   <label class="col-md-4 control-label" for="default"></label>
                                   <div class="col-md-8">
-                                    <button id="default" name="default" class="btn btn-default">Cancel</button>
-                                    <button id="save" name="save" class="btn btn-success">Change Password</button>
+                                    <a href=" <?php echo $this->url(array('controller' => 'admin_dashboard', 'action' => 'index'), 'default', 'true'); ?> " id="default" name="default" class="btn btn-default">Cancel</a>
+                                    <button id="save" type="submit" name="save" class="btn btn-success">Change Password</button>
                                   </div>
                                 </div>
                                 
