--- a/application/views/scripts/admin/members/edit.phtml
+++ b/application/views/scripts/admin/members/edit.phtml
@@ -1,88 +1,172 @@
 <?php
-
-$this->headTitle('Members - Edit Member');
-
+    $this->headTitle('Members - Edit Member');
+    
+    $form = $this->form;
+    $form->setElementDecorators(array('ViewHelper'));
 ?>
 <div class="page-header">
-	<h1>Members <small>Edit Member</small></h1>
+    <h1>Members <small>Edit Member</small></h1>
 </div>
 <div class="row">
-	<div class="col-lg-12">
-		<?php echo $this->systemMessagesHtml($this->systemMessages);?>
-	</div>
+    <div class="col-lg-12">
+<?php echo $this->systemMessagesHtml($this->systemMessages); ?>
+    </div>
 </div>
 <div class="row">
-	<div class="col-lg-12">
-		<div class="panel panel-default">
-			<div class="panel-heading text-right">
-				<div class="btn-group" role="group" aria-label="...">
-					<a href="
-                                            <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'index'), 'default', true);?>
-                                                " 
-                                                class="btn btn-default" ><i class="glyphicon glyphicon-arrow-left"></i> Back to all members</a>
-				</div>
-			</div>
-			<div class="panel-body">
-                            <form class="form-horizontal">
-                                <fieldset>
-                                    <!-- Form Name -->
-                                    <legend>Edit Member</legend>
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="first_name">First Name</label>  
-                                            <div class="col-md-4">
-                                                   <input id="first_name" name="first_name" type="text" placeholder="enter member's first name" class="form-control input-md" required="">
-                                                <span class="help-block">min 3 max 255 characters</span>  
-                                            </div>
-                                        </div>
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading text-right">
+                <div class="btn-group" role="group" aria-label="...">
+                    <a href="
+                            <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'index'), 'default', true); ?>
+                       " 
+                       class="btn btn-default" ><i class="glyphicon glyphicon-arrow-left"></i> Back to all members</a>
+                </div>
+            </div>
+            <div class="panel-body">
+                <form class="form-horizontal" method="post">
+                    <input type="hidden" name="task" value="update">
+                    
+                    <fieldset>
+                        <!-- Form Name -->
+                        <legend>Edit Member - <?php echo $this->escape($this->member['first_name'] . ' ' . $this->member['last_name']); ?> </legend>
 
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="last_name">Last Name</label>  
-                                            <div class="col-md-4">
-                                                    <input id="last_name" name="last_name" type="text" placeholder="enter member's last name" class="form-control input-md" required="">
-                                                <span class="help-block">min 3 max 255 characters</span>  
-                                            </div>
-                                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="first_name">First Name</label>  
+                            <div class="col-md-4">
+                                <?php
+                                    echo $form->getElement('first_name')->setAttribs(array(
+                                        'class' => 'form-control input-md',
+                                        'placeholder' => 'Enter member\'s first name',
+                                        'id' => 'first_name',
+                                        'required' => 'required'
+                                    ));
+                                ?>
+                                <span class="help-block">min 3, max 255 cgaracters</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('first_name')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('first_name')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
 
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="email">Email</label>  
-                                            <div class="col-md-4">
-                                                    <input id="email" name="email" type="text" placeholder="enter member's email" class="form-control input-md" required="">
-                                                <span class="help-block">user@domain</span>  
-                                            </div>
-                                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="last_name">Last Name</label>  
+                            <div class="col-md-4">
+                                <?php
+                                    echo $form->getElement('last_name')->setAttribs(array(
+                                        'class' => 'form-control input-md',
+                                        'placeholder' => 'Enter member\'s last name',
+                                        'id' => 'last_name',
+                                        'required' => 'required'
+                                    ));
+                                ?>
+                                <span class="help-block">min 3, max 255 characters</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('last_name')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('last_name')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
 
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="work_title">Work Title</label>  
-                                            <div class="col-md-4">
-                                                    <input id="work_title" name="work_title" type="text" placeholder="enter member's work title" class="form-control input-md">
-                                                <span class="help-block">min 3 max 255 characters</span>  
-                                            </div>
-                                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="email">Email</label>  
+                            <div class="col-md-4">
+                                <?php
+                                    echo $form->getElement('email')->setAttribs(array(
+                                        'class' => 'form-control input-md',
+                                        'placeholder' => 'Enter member\'s email',
+                                        'id' => 'email',
+                                        'required' => 'required'
+                                    ));
+                                ?>
+                               
+                                <span class="help-block">username@domain</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('email')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('email')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
 
-                                        <!-- Textarea -->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="resume">Resume</label>
-                                            <div class="col-md-4">                     
-                                                <textarea class="form-control" id="resume" name="resume"></textarea>
-                                            </div>
-                                        </div>
-                                        
-                                        <!-- Button (Double) -->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="default"></label>
-                                          <div class="col-md-8">
-                                            <button id="default" name="default" class="btn btn-default">Cancel</button>
-                                            <button id="save" name="save" class="btn btn-success">Save</button>
-                                          </div>
-                                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="work_title">Work Title</label>  
+                            <div class="col-md-4">
+                                <?php
+                                    echo $form->getElement('work_title')->setAttribs(array(
+                                        'class' => 'form-control  input-md',
+                                        'id' => 'work_title'
+                                    ));
+                                ?>
+                                
+                                <span class="help-block">ex. "senior web developer"</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('work_title')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('work_title')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
 
-</fieldset>
-</form>
-			</div>
-		</div>
-	</div>
+                        <!-- Textarea -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="resume">Resume</label>
+                            <div class="col-md-4"> 
+                                <?php
+                                    echo $form->getElement('resume')->setAttribs(array(
+                                        'class' => 'form-control',
+                                        'id' => 'resume',
+                                        'rows' => '12'
+                                    ));
+                                ?>
+                                
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('resume')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('resume')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
+
+                        <!-- Button (Double) -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="new_member_cancel"></label>
+                            <div class="col-md-4 text-right">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_members', 'action' => 'index'), 'default', 'true'); ?> " id="new_member_cancel" name="new_member_cancel" class="btn btn-default" >Cancel</a>
+                                <button type="submit" id="new_member_submit" name="new_member_submit" class="btn btn-success">Save</button>
+                            </div>
+                        </div>
+
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
