--- a/application/views/scripts/admin/profile/edit.phtml
+++ b/application/views/scripts/admin/profile/edit.phtml
@@ -1,6 +1,8 @@
 <?php
 
-$this->headTitle('Profile - Edit Profile');
+    $this->headTitle('Profile - Edit Profile');
+    $form = $this->form;
+    $form->setElementDecorators(array('ViewHelper'));
 
 ?>
 <div class="page-header">
@@ -12,59 +14,110 @@ $this->headTitle('Profile - Edit Profile');
 	</div>
 </div>
 <div class="row">
-	<div class="col-lg-12">
-		<div class="panel panel-default">
-			<div class="panel-heading text-right">
-				<div class="btn-group" role="group" aria-label="...">
-					<a href="
-                                            <?php echo $this->url(array('controller' => 'admin_profile', 'action' => 'changepassword'), 'default', true);?>
-                                                " 
-                                                class="btn btn-default" ><i class="fa fa-key"></i> Change Password</a>
-				</div>
-			</div>
-			<div class="panel-body">
-                            <form class="form-horizontal">
-                                <fieldset>
-                                    <!-- Form Name -->
-                                    <legend>Edit Profile</legend>
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="first_name">First Name</label>  
-                                            <div class="col-md-4">
-                                                   <input id="first_name" name="first_name" type="text" placeholder="enter member's first name" class="form-control input-md" >
-                                                <span class="help-block">min 3 max 255 characters</span>  
-                                            </div>
-                                        </div>
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading text-right">
+                <div class="btn-group" role="group" aria-label="...">
+                    <a href="
+                    <?php echo $this->url(array('controller' => 'admin_profile', 'action' => 'changepassword'), 'default', true); ?>
+                       " 
+                       class="btn btn-default" ><i class="fa fa-key"></i> Change Password</a>
+                </div>
+            </div>
+            <div class="panel-body">
+                <form class="form-horizontal" method="post" action="">
+                    <input type="hidden" name="task" value="save">
 
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="last_name">Last Name</label>  
-                                            <div class="col-md-4">
-                                                    <input id="last_name" name="last_name" type="text" placeholder="enter member's last name" class="form-control input-md" >
-                                                <span class="help-block">min 3 max 255 characters</span>  
-                                            </div>
-                                        </div>
+                    <fieldset>
+                        <!-- Form Name -->
+                        <legend>Edit Profile</legend>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="first_name">First Name</label>  
+                            <div class="col-md-4">
+                                <?php
+                                echo $form->getElement('first_name')->setAttribs(array(
+                                    'class' => 'form-control input-md',
+                                    'placeholder' => 'Enter member\'s first name',
+                                    'id' => 'first_name',
+                                    'required' => 'required'
+                                ));
+                                ?>
+                                <span class="help-block">min 3, max 255 cgaracters</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('first_name')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('first_name')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
 
-                                        <!-- Text input-->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="email">Email</label>  
-                                            <div class="col-md-4">
-                                                    <input id="email" name="email" type="text" placeholder="enter member's email" class="form-control input-md" >
-                                                <span class="help-block">user@domain</span>  
-                                            </div>
-                                        </div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="last_name">Last Name</label>  
+                            <div class="col-md-4">
+                                <?php
+                                echo $form->getElement('last_name')->setAttribs(array(
+                                    'class' => 'form-control input-md',
+                                    'placeholder' => 'Enter member\'s last name',
+                                    'id' => 'last_name',
+                                    'required' => 'required'
+                                ));
+                                ?>
+                                <span class="help-block">min 3, max 255 characters</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('last_name')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('last_name')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
 
-                                        <!-- Button (Double) -->
-                                        <div class="form-group">
-                                          <label class="col-md-4 control-label" for="default"></label>
-                                          <div class="col-md-8">
-                                            <button id="default" name="default" class="btn btn-default">Cancel</button>
-                                            <button id="save" name="save" class="btn btn-success">Save</button>
-                                          </div>
-                                        </div>
-                                </fieldset>
-                            </form>
-			</div>
-		</div>
-	</div>
+                        <!-- Text input-->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="email">Email</label>  
+                            <div class="col-md-4">
+                                <?php
+                                echo $form->getElement('email')->setAttribs(array(
+                                    'class' => 'form-control input-md',
+                                    'placeholder' => 'Enter member\'s email',
+                                    'id' => 'email',
+                                    'required' => 'required'
+                                ));
+                                ?>
+
+                                <span class="help-block">username@domain</span>  
+                            </div>
+                            <div class="col-md-4">
+                                <?php if ($form->getElement('email')->hasErrors()) { ?>
+                                    <div class="has-error">
+                                        <?php foreach ($form->getElement('email')->getMessages() as $message) { ?>
+                                            <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                        <?php } ?>
+                                    </div>
+                                <?php } ?>
+                            </div>
+                        </div>
+
+                        <!-- Button (Double) -->
+                        <div class="form-group">
+                            <label class="col-md-4 control-label" for="default"></label>
+                            <div class="col-md-8">
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_dashboard', 'action' => 'index'), 'default', 'true'); ?> " id="default" name="default" class="btn btn-default">Cancel</a>
+                                <button id="save" name="save" class="btn btn-success" type="submit">Save</button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
