--- a/application/views/scripts/admin/profile/changepassword.phtml
+++ b/application/views/scripts/admin/profile/changepassword.phtml
@@ -1,62 +1,91 @@
 <?php
-
-$this->headTitle('Profile - Change Password');
-
+    $this->headTitle('Profile - Change Password');
+    
+    $form = $this->form;
+    $form->setElementDecorators(array('ViewHelper'));
 ?>
-<div class="page-header">
-	<h1>Profile <small>Change Password</small></h1>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<?php echo $this->systemMessagesHtml($this->systemMessages);?>
-	</div>
-</div>
-<div class="row">
-	<div class="col-lg-12">
-		<div class="panel panel-default">
-			<div class="panel-heading text-right">
-				<div class="btn-group" role="group" aria-label="...">
-					<a href="
-                                            <?php echo $this->url(array('controller' => 'admin_profile', 'action' => 'edit'), 'default', true);?>
-                                                " 
-                                                class="btn btn-default" ><i class="fa fa-user"></i> Edit Profile</a>
-				</div>
-			</div>
-			<div class="panel-body">
-                            <form class="form-horizontal">
-                                <fieldset>
-                                <!-- Form Name -->
-                                <legend>Change Password</legend>
-                               
-                                <!-- Password input-->
-                                <div class="form-group">
-                                  <label class="col-md-4 control-label" for="new_password">New Password</label>
-                                  <div class="col-md-4">
+
+    <div class="page-header">
+        <h1>Profile <small>Change Password</small></h1>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <?php echo $this->systemMessagesHtml($this->systemMessages);?>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                
+                <div class="panel-heading text-right">
+                    <div class="btn-group" role="group" aria-label="...">
+                        <a href="
+                        <?php echo $this->url(array('controller' => 'admin_profile', 'action' => 'edit'), 'default', true); ?>
+                           " 
+                           class="btn btn-default" ><i class="fa fa-user"></i> Edit Profile</a>
+                    </div>
+                </div>
+                
+                <div class="panel-body">
+                    <form class="form-horizontal" method="post" action="">
+                        <input type="hidden" name="task" value="change_password">
+                        <fieldset>
+                            <!-- Form Name -->
+                            <legend>Change Password</legend>
+
+                            <!-- Password input-->
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="new_password">New Password</label>
+                                <div class="col-md-4">
                                     <input id="new_password" name="new_password" type="password" placeholder="enter new password" class="form-control input-md" required="">
                                     <span class="help-block">min 5 max 255 characters</span>
-                                  </div>
                                 </div>
+                                <div class="col-md-4">
+                                    <?php if ($form->getElement('new_password')->hasErrors()) { ?>
+                                        <div class="has-error">
+                                            <?php foreach ($form->getElement('new_password')->getMessages() as $message) { ?>
+                                                <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                            <?php } ?>
+                                        </div>
+                                    <?php } ?>
+                                </div>
+                            </div>
+                            
 
-                                <!-- Password input-->
-                                <div class="form-group">
-                                  <label class="col-md-4 control-label" for="new_password_confirm">Confirm new password</label>
-                                  <div class="col-md-4">
+                            <!-- Password input-->
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="new_password_confirm">Confirm new password</label>
+                                <div class="col-md-4">
                                     <input id="new_password_confirm" name="new_password_confirm" type="password" placeholder="confirm new password" class="form-control input-md" required="">
-                                  </div>
                                 </div>
-                                
-                                <!-- Button (Double) -->
-                                <div class="form-group">
-                                  <label class="col-md-4 control-label" for="default"></label>
-                                  <div class="col-md-8">
+                                <div class="col-md-4">
+                                    <?php if ($form->getElement('new_password_confirm')->hasErrors()) { ?>
+                                        <div class="has-error">
+                                            <?php foreach ($form->getElement('new_password_confirm')->getMessages() as $message) { ?>
+                                                <p class="help-block"><?php echo $this->escape($message); ?></p>
+                                            <?php } ?>
+                                        </div>
+                                    <?php } ?>
+                                </div>
+                            </div>
+                            
+
+                            <!-- Button (Double) -->
+                            <div class="form-group">
+                                <label class="col-md-4 control-label" for="default"></label>
+                                <div class="col-md-8">
                                     <a href=" <?php echo $this->url(array('controller' => 'admin_dashboard', 'action' => 'index'), 'default', 'true'); ?> " id="default" name="default" class="btn btn-default">Cancel</a>
                                     <button id="save" type="submit" name="save" class="btn btn-success">Change Password</button>
-                                  </div>
                                 </div>
-                                
-                                </fieldset>
-                            </form>
-			</div>
-		</div>
-	</div>
-</div>
+                            </div>
+                            
+
+                        </fieldset>
+                    </form>
+                </div>
+                
+            </div>
+        </div>
+    </div>
