--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -128,7 +128,9 @@
 
         <!-- Custom Theme JavaScript -->
         <script src=" <?php echo $this->baseUrl('/admin/dist/js/sb-admin-2.js') ?> "></script>
-
+        
+        <?php echo $this->inlineScript(); ?>
+        
     </body>
 
 </html>
