--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -100,6 +100,9 @@
                             <li>
                                 <a href=" <?php echo $this->url(array('controller' => 'admin_services'), 'default', 'true'); ?> "><i class="fa fa-briefcase"></i> Services</a>
                             </li>
+                            <li>
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_users'), 'default', 'true'); ?> "><i class="fa fa-user fa-fw"></i> Users</a>
+                            </li>
                         </ul>
                     </div>
                     <!-- /.sidebar-collapse -->
