--- a/application/views/scripts/admin/users/add.phtml
+++ b/application/views/scripts/admin/users/add.phtml
@@ -25,8 +25,8 @@ $form->setElementDecorators(array('ViewHelper'));
 				</div>
 			</div>
 			<div class="panel-body">
-				<form class="form-horizontal" method="post" action="" enctype="multipart/form-data">
-					<input type="hidden" name="task" value="update">
+				<form class="form-horizontal" method="post" action="">
+					<input type="hidden" name="task" value="save">
 					
 					<fieldset>
 
@@ -45,7 +45,7 @@ $form->setElementDecorators(array('ViewHelper'));
 									'required' => 'required'
 								));
 								?>
-								<span class="help-block">min 3 max 255 characters</span>  
+								<span class="help-block">min 3 max 50 characters</span>  
 							</div>
 							<div class="col-md-4">
 								<?php if ($form->getElement('username')->hasErrors()) {?>
@@ -66,8 +66,7 @@ $form->setElementDecorators(array('ViewHelper'));
 								echo $form->getElement('first_name')->setAttribs(array(
 									'class' => 'form-control input-md',
 									'placeholder' => 'enter user\'s first name',
-									'id' => 'first_name',
-									'required' => 'required'
+									'id' => 'first_name'
 								));
 								?>
 								<span class="help-block">min 3 max 255 characters</span>  
@@ -91,8 +90,7 @@ $form->setElementDecorators(array('ViewHelper'));
 								echo $form->getElement('last_name')->setAttribs(array(
 									'class' => 'form-control input-md',
 									'placeholder' => 'enter user\'s last name',
-									'id' => 'last_name',
-									'required' => 'required',
+									'id' => 'last_name'
 								));
 								?>
 								<span class="help-block">min 3 max 255 characters</span>  
@@ -117,8 +115,7 @@ $form->setElementDecorators(array('ViewHelper'));
 								echo $form->getElement('email')->setAttribs(array(
 									'class' => 'form-control input-md',
 									'placeholder' => 'enter user\'s email',
-									'id' => 'email',
-									'required' => 'required'
+									'id' => 'email'
 								));
 								?>
 								<span class="help-block">username@domain</span>  
