--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -98,10 +98,13 @@
                                 <a href=" <?php echo $this->url(array('controller' => 'admin_members'), 'default', 'true'); ?> "><i class="fa fa-table fa-fw"></i> Members</a>
                             </li>
                             <li>
-                                <a href=" <?php echo $this->url(array('controller' => 'admin_services'), 'default', 'true'); ?> "><i class="fa fa-briefcase"></i> Services</a>
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_services'), 'default', 'true'); ?> "><i class="fa fa-briefcase"></i>  Services</a>
                             </li>
                             <li>
                                 <a href=" <?php echo $this->url(array('controller' => 'admin_users'), 'default', 'true'); ?> "><i class="fa fa-user fa-fw"></i> Users</a>
+                            </li>
+                            <li>
+                                <a href=" <?php echo $this->url(array('controller' => 'admin_clients'), 'default', 'true'); ?> "><i class="fa fa-users fa-fw"></i> Clients</a>
                             </li>
                         </ul>
                     </div>
