--- a/application/views/scripts/admin/users/index.phtml
+++ b/application/views/scripts/admin/users/index.phtml
@@ -187,7 +187,7 @@ $this->headTitle('Users');
 
 <?php
     $this->headLink()->appendStylesheet($this->baseUrl('/admin/bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.css'));
-    $this->headLink()->appendStylesheet($this->baseUrl('/admin/bower_components/datatables-responsive/css/dataTables.responsive.css'));
+    //$this->headLink()->appendStylesheet($this->baseUrl('/admin/bower_components/datatables-responsive/css/dataTables.responsive.css'));
     $this->inlineScript()->appendFile($this->baseUrl('/admin/bower_components/datatables/media/js/jquery.dataTables.min.js'));
     $this->inlineScript()->appendFile($this->baseUrl('/admin/bower_components/datatables-plugins/integration/bootstrap/3/dataTables.bootstrap.min.js'));
     $this->inlineScript()->appendFile($this->baseUrl('/admin/bower_components/datatables-responsive/js/dataTables.responsive.js'));
@@ -272,7 +272,9 @@ $this->headTitle('Users');
         order: [
                     [2, 'asc']
                 ],
-        lengthMenu: [3, 5, 10, 20, 50, 100]
+        lengthMenu: [3, 5, 10, 20, 50, 100],
+        serverSide: true,  //na svaki klik pitaj server da ti vrati
+        ajax: "<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'datatable'), 'default', true); ?>"  //
    });
   
   
