--- a/application/views/scripts/admin/users/index.phtml
+++ b/application/views/scripts/admin/users/index.phtml
@@ -267,13 +267,14 @@ $this->headTitle('Users');
   
     $('#rows-table').dataTable({
         columnDefs: [
-            {targets: [0, 5], orderable: false, searchable: false}
+            {targets: [5], orderable: false, searchable: false}
         ],
         order: [
                     [2, 'asc']
                 ],
         lengthMenu: [3, 5, 10, 20, 50, 100],
         serverSide: true,  //na svaki klik pitaj server da ti vrati
+        processing: true,
         ajax: "<?php echo $this->url(array('controller' => 'admin_users', 'action' => 'datatable'), 'default', true); ?>"  //
    });
   
